--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/server": "^11.0.0-rc.446",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
+    "howler": "^2.2.4",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "postgres": "^3.4.4",
@@ -33,6 +34,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
+    "@types/howler": "^2.2.11",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
